fixed hamburger menu overlapping issue

--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ body {
   left: 0;
   width: 100%;
   padding: 1rem;
-  z-index: 99999;
+  z-index: 1000;
 }
 
 
